--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html>
 <head>
   <title>TestGitHub</title>
@@ -9,6 +9,7 @@
 <body>
 vamsi
 krishna
+Ramisettiy
 <%= yield %>
 
 </body>
